--- a/A1/makefile
+++ b/A1/makefile
@@ -10,3 +10,7 @@ all: $(EXE)
 $(EXE): $(SOURCES)
 	$(CXX) $(INCLUDE_DIR) $(CXXFLAGS) src/*.cc -o $@ $(LDFLAGS)
 	strip $(EXE)
+
+.phony: rm
+clean:
+	rm $(EXE)
