* cannon shoots missiles
git-svn-id: svn://linux024.student.cs.uwaterloo.ca:6002/cs349-w13/a77chan@275 e6734b0b-edca-4bbd-838e-e6edfc10aa3f

--- a/A1/makefile
+++ b/A1/makefile
@@ -6,10 +6,10 @@ CXXFLAGS = -std=c++0x -march=native -O3 -pipe -s
 EXE = start
 
 all: $(EXE)
+	./$(EXE)
 
 $(EXE): $(SOURCES)
 	$(CXX) $(INCLUDE_DIR) $(CXXFLAGS) src/*.cc -o $@ $(LDFLAGS)
-#	strip $(EXE)
 
 .phony: rm
 clean:
