* synced from git
git-svn-id: svn://linux024.student.cs.uwaterloo.ca:6002/cs349-w13/a77chan@564 e6734b0b-edca-4bbd-838e-e6edfc10aa3f

--- a/A1/src/makefile
+++ b/A1/src/makefile
@@ -7,7 +7,7 @@ DEBUG = -Werror
 DEBUG = -DDEBUG -Werror
 CXXFLAGS = $(DEBUG) -pedantic-errors -Wall -std=c++0x -march=native $(OLEVEL) -pipe
 OBJECTS = $(SOURCES:.cc=.o)
-EXE = start
+EXE = start.exe
 
 all: $(EXE)
 
