* renamed run to makefile * makefile updated * readme updated
git-svn-id: svn://linux024.student.cs.uwaterloo.ca:6002/cs349-w13/a77chan@791 e6734b0b-edca-4bbd-838e-e6edfc10aa3f

--- a/A1/makefile
+++ b/A1/makefile
@@ -6,11 +6,13 @@ CXXFLAGS = -std=c++0x -march=native -O3 -pipe -s
 EXE = start.exe
 
 all: $(EXE)
-	./$(EXE)
 
 $(EXE): $(SOURCES)
 	$(CXX) $(INCLUDE_DIR) $(CXXFLAGS) src/*.cc -o $@ $(LDFLAGS)
 
-.phony: rm
+.phony: rm run
 clean:
 	rm $(EXE)
+
+run: $(EXE)
+	./$(EXE)
