--- a/m4_files/A2/makefile
+++ b/m4_files/A2/makefile
@@ -3,25 +3,21 @@ M4_MARCO=$(shell find -name "*.m4")
 SOURCES=$(M4_MARCO:.m4=.java)
 CLASSES = $(SOURCES:.java=.class)
 _CLASS_DIR_NAME = doozerSimulator
-CLASS_DIR = $(shell mkdir -p $(_CLASS_DIR_NAME); echo $(_CLASS_DIR_NAME))
+CLASS_DIR = $(shell mkdir -p A2/$(_CLASS_DIR_NAME); echo $(_CLASS_DIR_NAME))
 M4_DEFINE = -DM4_PACKAGE_NAME=$(CLASS_DIR)
 
-all: $(CLASSES) $(SOURCES)
+all: A2 $(SOURCES) A2/makefile
+
+A2:
+	mkdir -p A2
+
+A2/makefile: maketemplate
+	m4 $(M4_DEFINE) config $< > A2/makefile
 
 %.java: %.m4
 	m4 $(M4_DEFINE) config $< > $@
-	cp $@ $(CLASS_DIR)
+	cp $@ A2/$(CLASS_DIR)
 
-%.class: %.java
-	javac $(CLASS_DIR)/$<
-	cp $(CLASS_DIR)/$@ .
-
-.phony: clean run
+.phony: clean
 clean:
-	rm -rf *.{java,class}
-
-cleanall: clean
-	rm -rf $(CLASS_DIR)
-
-run: $(CLASSES)
-	java $(CLASS_DIR)/Main
+	rm -rf A2 *.java
