* makefile create and jar

--- a/A2/makefile
+++ b/A2/makefile
@@ -2,15 +2,19 @@ JAVAC = javac
 SOURCES= $(shell find -name "*.java")
 CLASSES = $(SOURCES:.java=.class)
 CLASS_DIR=doozerSimulator
+JAR = doozer.jar
 
-all: $(CLASSES) $(SOURCES)
+all: $(JAR)
+
+$(JAR): $(CLASSES)
+	jar cvfe $(JAR) doozerSimulator.Main doozerSimulator/
 
 %.class: %.java
 	javac $<
 
 .phony: clean run
 clean:
-	rm -rf $(CLASS_DIR)/*.class $(CLASS_DIR)/model/*.class $(CLASS_DIR)/view/*.class
+	rm -rf $(CLASS_DIR)/*.class $(CLASS_DIR)/model/*.class $(CLASS_DIR)/view/*.class *.jar
 
 run: $(CLASSES)
-	java $(CLASS_DIR)/Main
+	java -jar $(JAR)
