--- a/A2/makefile
+++ b/A2/makefile
@@ -14,7 +14,7 @@ $(JAR): $(CLASSES) $(SOURCES)
 
 .phony: clean run
 clean:
-	rm -rf $(CLASS_DIR)/*.class $(CLASS_DIR)/model/*.class $(CLASS_DIR)/view/*.class *.jar
+	rm -rf $(CLASS_DIR)/*.class $(CLASS_DIR)/model/*.class $(CLASS_DIR)/view/*.class *.jar $(CLASS_DIR)/objects/*.class
 
 run: $(JAR)
 	java -jar $(JAR)
