* updated makefile and ideas

--- a/A3/makefile
+++ b/A3/makefile
@@ -7,6 +7,8 @@ JAR = sketch.jar
 #all: $(JAR)
 all: $(JAR) $(CLASSES)
 
+.SUFFIXES : .class .java
+
 $(JAR): $(CLASSES) $(SOURCES)
 	jar cvfe $(JAR) sketch.Main `find sketch/ -name *.class`
 
