--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity android:name="chan.alfred.sketchplayer.ConfigActivity"
+           android:label="@string/config_title"/>
     </application>
 
 </manifest>
