--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
          <activity android:name="chan.alfred.sketchplayer.ConfigActivity"
            android:label="@string/config_title"/>
+          <activity android:name="chan.alfred.sketchplayer.FileChooserActivity"
+           android:label="@string/file_chooser_title"/>
     </application>
 
 </manifest>
